--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -7,7 +7,13 @@ body {
 
 .hero {
     display: flex;
-    flex-direction: column;
+}
+
+@media screen and (max-width: 880px) {
+    .hero {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .hero__subsection {
@@ -17,13 +23,11 @@ body {
     height: 100vh;
     font-family: 'Noto Serif Display', serif;
     font-size: 96px;
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    background-position: 60%;
     transition: ease-in-out .3s;
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    flex-grow: 1;
 }
 
 .hero__subsection h3 {
@@ -32,6 +36,17 @@ body {
     margin: 0;
     position: relative;
     z-index: 1;
+    font-size: 80px;
+    /* Prevent selection of text */
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
+@media screen and (max-width: 880px) {
+    .hero__subsection h3 {
+        font-size: 96px;
+    }
 }
 
 .hero__subsection .bg-image {
@@ -42,8 +57,9 @@ body {
     left: 0px;
     opacity: 0.5;
     z-index: 0;
-    height: 100vh;
     transition: ease-in-out .3s;
+    height: 100vh;
+    object-fit: contain;
 }
 
 .hero__subsection:hover .bg-image {
@@ -57,10 +73,15 @@ body {
     justify-content: center;
     gap: 24px;
     height: 100vh;
-    padding: 0 32px;
-    background-size: auto 100%;
+    background-size: cover;
     background-position: 60%;
     background-repeat: no-repeat;
+    padding: 0 10%;
+}
+
+.details-container {
+    display: flex;
+    flex-direction: column;
 }
 
 .detail h3 {
@@ -75,13 +96,49 @@ body {
     line-height: 150%;
 }
 
+/* Beauty Section */
+
 .detail__beauty {
     background-image: url('/resources/images/section-1.png');
 }
 
+/* Music Section */
 .detail__music {
     background-image: url('/resources/images/section-2.png');
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+    align-items: center;
 }
+
+.detail__music .detail__music-info {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+@media screen and (max-width: 880px) {
+    .detail__music {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .detail__music img {
+        width: 380px;
+    }
+}
+
+.detail__music p {
+    margin: 0;
+}
+
+.detail__music img {
+    max-width: 500px;
+    height: auto;
+}
+
+/* Business Section */
+
 .detail__business {
     background-image: url('/resources/images/section-3.png');
 }
